static/css/style.css
.row {
	width: 100%;
}

body {
	font-family: 'Inconsolata', Monaco, "Lucida Console", Consolas, "Courier New", "Helvetica Neue";
	background-color: #f9f9f9;
	height: 9000px;
}

.spacer {
	height: 50px;
}

strong {
	font-weight: 900;
}

/* Graph Scroll */

/*#container{*/
  /*position: relative;*/
/*}*/

/*#sections{*/
  /*width: 340px;*/
/*}*/

/*#graph{*/
  /*margin-left: 40px;*/
  /*width: 500px;*/
  /*position: sticky;*/
  /*top: 0px;*/
  /*float: right;*/
/*}*/

/*@media (max-width: 925px)  {*/
  /*#graph{*/
    /*width: 100%;*/
    /*margin-left: 0px;*/
    /*float: none;*/
  /*}*/

  /*#sections{*/
    /*position: relative;*/
    /*margin: 0px auto;*/
    /*padding-top: 400px;*/
  /*}*/
/*}*/


/**/

.tile-wrapper {
    height: 780px;
    /*opacity: 0.2;*/
}

.viz-tile {
	/*visibility: hidden;*/
	/*display: none;*/
	position: sticky;
    /*display: none;*/
    top: 40px;
	margin-top: 60px;
	margin-right: 15px;
    /*height: 800px;*/
}

/*.viz-area {*/
    /*position: sticky;*/
    /*top; 0;*/
/*}*/

/*#map-tile {*/
	/*position: fixed;*/
/*}*/

/*#flowchart-tile {*/
	/*position: fixed;*/
	/*!*top: 800px;*!*/
/*}*/

.d3-tip {
	max-width: 400px;
	background-color: white;
	color: black;
	border-radius: 5px;
	border: 1px solid black;
	z-index: 100;
    position: absolute;
}

@media (hover: none) .d3-tip {
	overflow-y: auto;
	max-height: 400px;
}

.tip-text {
	font-size: 9pt;
}

#sections {
	position: absolute;
	display: inline-block;
	width: 300px;
	top: 0px;
	z-index: 50;
}

.step {
	margin-top: 300px;
	margin-bottom: 400px;
	margin-left: 10px;

	min-height: 350px;
	border-radius: 15px;

	overflow: hidden;
}

.step:not(:first-child) {
	background-color: white;
}

.step:first-child {
	background-color: #f9f9f9 !important;
}

.step:not(:first-child) .title {
	text-align: center;
	font-weight: bolder;
	background-color: rgba(28, 148, 196, 0.25);
	/*border-radius: 3px;*/

	padding-top: 2px;
	padding-bottom: 2px;
}

.step .body {
	margin-top: 10px;
	font-size: 9pt;

	padding-left: 10px;
}

.container {
	/*margin-left: 15%;*/
	/*margin-right: 15%;*/
	/*position: absolute;*/
	/*display: inline-block;*/
	/*position: inline;*/
	/*top: 60px;*/
	z-index: 2;
}

#flowchart-tile {
    margin-right: 100px;
}

.complaint-box {
	cursor: pointer;
}

.sunburst-select {
	background-color: #fff;
	border: 1px solid #cdcdcd;

	padding-left: 3px;
	padding-right: 3px;
}

.annotation-li {
	margin-bottom: 5px;
}

span.category-text {
	padding: 1px;
	padding-left: 2px;
	padding-right: 2px;
}

select.white, span.white {
	background-color: rgba(255,25,25,0.5);
}

select.black, span.black {
	background-color: rgba(50,50,255,0.5);
}

select.latino, span.latino {
	background-color: rgba(255,172,20,0.5);
}

select.other, span.other {
	background-color: rgba(128,128,128,0.5);
}

#slider-div {
	margin-top: 20px;
}

#play-button-div {
	/*width: 55px;*/
	text-align: center;
	/*margin-right: 10px;*/
}

#play-button {
	width: 90%;
	max-width: 55px;
	text-align: center;
	margin-top: 5px;
	/*margin-right: 20px;*/
}

.date-display {
	/*margin-top: 8px;*/
	min-width: 120px;
}

.date-display-container {
	margin-top: 15px;
}


.chosen-container-div {
	margin-top: 20px;
}

.chosen-choices {
	font-size: 8pt;
	max-height: 120px;
	overflow-y: auto !important;
}

.detail-title {
	background-color: rgba(28, 148, 196, 0.25);
	border-radius: 3px;
	/*margin-bottom: 5px;*/
	/*padding: 1px;*/
}


.ui-slider {
	visibility: hidden;
	padding: 0px;
	border-width: 0px;
}

.ui-slider-handle {
	visibility: visible;
	border: none;
	/*max-width: 5px;*/
}

#flowchart-tile.group-label {
	z-index: 20;
}

/*#total-complaints {*/
	/**/
/*}*/

/*#total-investigations {*/
	/**/
/*}*/

